--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,26 @@
 name: CI
-on: [push]
+on:
+  - push
+  - pull_request
 jobs:
   tests:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup python
+        uses: actions/setup-python@v4
         with:
-          fetch-depth: 1
+          python-version: "3.10"
 
-      - uses: taiki-e/install-action@just
+      - name: Install poetry
+        uses: snok/install-poetry@v1
 
-      - name: Setup dependencies
+      - name: Install just
+        uses: taiki-e/install-action@just
+
+      - name: Install the dependencies
         run: just dev
 
       - name: Run test
